Fix: Camera settings text overflow

--- a/src/app/components/menu/camera-settings/camera-settings.component.scss
+++ b/src/app/components/menu/camera-settings/camera-settings.component.scss
@@ -32,6 +32,11 @@ div#camera-settings {
     margin: 0;
   }
 
+  p {
+    overflow-wrap: break-word;
+    text-wrap: balance;
+  }
+
   &.opened {
     transform: scale(1);
     filter: opacity(1);
